# tafeltennis

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/tafeltennis/: cli.py  config.py  google_chat.py  scheduler.py
tests/: test_config.py  test_scheduler.py
